--- a/RankenConcernReport/StyleSheet.css
+++ b/RankenConcernReport/StyleSheet.css
@@ -29,6 +29,15 @@ header{
     color:white;
 }
 
+#Continue{
+    text-decoration:none;
+    padding-left: 15px; 
+    padding-right: 15px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    font-family: Arial;
+    font-size: 16px;
+}
 
 #logo{
     float: left;
